kubernetes/ingress/helloapp.yml
apiVersion: v1
kind: Service
metadata:
  name: helloapp-svc
spec:
  selector:
    app: helloapp
  ports:
  - port: 4567
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloapp
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      containers:
      - image: nareshdoniparti/kubernetes-with-spring:v3
        name: springhelloapp-container
